# django-cloudinary-v1

./: .gitignore  README.md  pyproject.toml
core/settings/: base.py  dev.py
